[gd_scene load_steps=4 format=3 uid="uid://c4cclpkfueica"]

[ext_resource type="Script" path="res://mount.gd" id="1_1kubf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmboh"]
size = Vector2(23, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_to32l"]
size = Vector2(25, 21)

[node name="Mount" type="CharacterBody2D"]
velocity = Vector2(0, 90765)
script = ExtResource("1_1kubf")

[node name="RiderContainer" type="Node2D" parent="."]

[node name="RiderPosition" type="Marker2D" parent="."]
position = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 9)
shape = SubResource("RectangleShape2D_rmboh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 8.5)
shape = SubResource("RectangleShape2D_to32l")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
